# MoMoA

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: content-engine.yml
client-cli/: python_cli.py
content-engine/: .rules  docker-compose.yml
content-engine/api/: Dockerfile  agents.py  main.py  requirements.txt
src/: cloudrun-config.ts  websocket_server.ts
src/assets/prompts/strings/: prompt-enricher.md
src/config/: models.ts
src/momoa_core/: orchestrator.ts  types.ts
src/services/: executionProvider.ts
src/services/executionProviders/: cloudRunJobExecutionProvider.ts  cloudShellExecutionProvider.ts  cloudWorkstationsExecutionProvider.ts  e2BExecutionProvider.ts  sshExecutionProvider.ts
src/services/executionProviders/CloudRunJobsWorkers/: cloudRunJobsWorker.ts
src/shared/: model.ts
src/tools/implementations/: LintTool.ts  codeRunnerTool.ts  fileReaderTool.ts  fileSearchTool.ts  optimizerTool.ts  renameFolderTool.ts  revertFileTool.ts  smartFileEditorTool.ts
src/utils/: diffGenerator.ts  fileMapUtils.ts  markdownUtils.ts
